fix: remove horizontal scroll bar

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@ body {
   font-size: 2rem;
   font-weight: 300;
   background-color: var(--bg-color);
+  width: 100vw;
+  overflow: hidden;
 }
 
 a:any-link {
